--- a/styles/style.css
+++ b/styles/style.css
@@ -69,13 +69,30 @@ nav {
   /* ----------main part start----------- */
   .features-container {
     display: flex;
-    justify-content: space-between;
+    margin-top: 85px;
+    gap: 70px;
     align-items: center;
+    margin-bottom: 130px;
   }
-  .features-img{
+  .features-img {
     display: grid;
-    grid-template-columns: repeat(2 , 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    width: 100%;
   }
+  .feature-title {
+    font-weight: 500px;
+    font-size: 45px;
+    line-height: 53px;
+  }
+  .feature-description {
+    font-weight: 400px;
+    font-size: 16px;
+    line-height: 26px;
+    color: #727272;
+    margin: 24px 0 30px 0;
+  }
+
 
 
 
