--- a/styles/style.css
+++ b/styles/style.css
@@ -290,8 +290,15 @@ main {
 
 /* ----------responsive header part start----------- */
 @media (max-width: 576px) {
+  *{
+    margin: 0;
+  }
+  body {
+    height: 100%;
+    width: 100%;
+  }
   .container {
-    margin: 0 50px;
+    margin: 0 30px;
   }
   /* -------------header part----------------- */
   nav {
